--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/base": "^5.0.0-beta.68",
     "@mui/system": "^6.4.0",
     "@phosphor-icons/react": "^2.1.7",
+    "immer": "^10.1.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
